--- a/configure.in
+++ b/configure.in
@@ -746,6 +746,37 @@ else
     AC_MSG_RESULT(yes ('$XMLSEC_CRYPTO'))
 fi
 
+dnl ==========================================================================
+dnl See do we need MD5 suport
+dnl ==========================================================================
+AC_MSG_CHECKING(for MD5 support) 
+AC_ARG_ENABLE(md5,   [  --enable-md5            enable MD5 support (yes)])
+if test "z$enable_md5" = "zno" ; then
+    XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_MD5=1"
+    XMLSEC_NO_MD5="1"
+    AC_MSG_RESULT(no)
+else
+    XMLSEC_NO_MD5="0"
+    AC_MSG_RESULT(yes)
+fi    
+AM_CONDITIONAL(XMLSEC_NO_MD5, test "z$XMLSEC_NO_MD5" = "z1")
+AC_SUBST(XMLSEC_NO_MD5)
+
+dnl ==========================================================================
+dnl See do we need RIPEMD-160 suport
+dnl ==========================================================================
+AC_MSG_CHECKING(for RIPEMD-160 support) 
+AC_ARG_ENABLE(ripemd160,   [  --enable-ripemd160      enable RIPEMD-160 support (yes)])
+if test "z$enable_ripemd160" = "zno" ; then
+    XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_RIPEMD160=1"
+    XMLSEC_NO_RIPEMD160="1"
+    AC_MSG_RESULT(no)
+else
+    XMLSEC_NO_RIPEMD160="0"
+    AC_MSG_RESULT(yes)
+fi    
+AM_CONDITIONAL(XMLSEC_NO_RIPEMD160, test "z$XMLSEC_NO_RIPEMD160" = "z1")
+AC_SUBST(XMLSEC_NO_RIPEMD160)
 
 dnl ==========================================================================
 dnl See do we need SHA1 suport
@@ -827,21 +858,6 @@ fi
 AM_CONDITIONAL(XMLSEC_NO_SHA512, test "z$XMLSEC_NO_SHA512" = "z1")
 AC_SUBST(XMLSEC_NO_SHA512)
 
-dnl ==========================================================================
-dnl See do we need RIPEMD-160 suport
-dnl ==========================================================================
-AC_MSG_CHECKING(for RIPEMD-160 support) 
-AC_ARG_ENABLE(ripemd160,   [  --enable-ripemd160      enable RIPEMD-160 support (yes)])
-if test "z$enable_ripemd160" = "zno" ; then
-    XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_RIPEMD160=1"
-    XMLSEC_NO_RIPEMD160="1"
-    AC_MSG_RESULT(no)
-else
-    XMLSEC_NO_RIPEMD160="0"
-    AC_MSG_RESULT(yes)
-fi    
-AM_CONDITIONAL(XMLSEC_NO_RIPEMD160, test "z$XMLSEC_NO_RIPEMD160" = "z1")
-AC_SUBST(XMLSEC_NO_RIPEMD160)
 
 dnl ==========================================================================
 dnl See do we need HMAC suport
