fixing win32 build

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -35,7 +35,7 @@ AUTOCONF = .\configure.txt
 #WITH_CRYPTO=openssl
 #WITH_DEFAULT_CRYPTO=openssl
 #WITH_OPENSSL=1
-#WITH_OPENSSL_096=0
+#WITH_OPENSSL_VERSION=
 #WITH_NSS=0
 #WITH_MSCRYPTO=0
 #WITH_LIBXSLT=1
@@ -332,10 +332,10 @@ APP_CFLAGS		= $(APP_CFLAGS) $(XMLSEC_CRYPTO_CFLAGS)
 APP_CFLAGS		= $(APP_CFLAGS) /D "XMLSEC_NO_TMPL_TEST"
 !endif
 
-!if "$(WITH_OPENSSL_096)" == "1"
-XMLSEC_OPENSSL_CFLAGS   = /D "XMLSEC_OPENSSL_096"  /D "XMLSEC_CRYPTO_OPENSSL" /D "XMLSEC_CRYPTO=\"openssl\""
-!else
+!if "$(WITH_OPENSSL_VERSION)" == ""
 XMLSEC_OPENSSL_CFLAGS   = /D "XMLSEC_CRYPTO_OPENSSL" /D "XMLSEC_CRYPTO=\"openssl\""
+!else
+XMLSEC_OPENSSL_CFLAGS   = /D "$(WITH_OPENSSL_VERSION)" /D "XMLSEC_CRYPTO_OPENSSL" /D "XMLSEC_CRYPTO=\"openssl\""
 !endif
 XMLSEC_NSS_CFLAGS   	= /D "XMLSEC_CRYPTO_NSS" /D "XMLSEC_CRYPTO=\"nss\""
 XMLSEC_MSCRYPTO_CFLAGS  = /D "XMLSEC_CRYPTO_MSCRYPTO" /D "XMLSEC_CRYPTO=\"mscrypto\""
@@ -406,16 +406,6 @@ XMLSEC_CRYPTO_IMP	= $(XMLSEC_OPENSSL_IMP)
 XMLSEC_CRYPTO_A		= $(XMLSEC_OPENSSL_A)
 !endif
 
-!if "$(WITH_DEFAULT_CRYPTO)" == "openssl_096"
-XMLSEC_CRYPTO          	= "openssl"
-XMLSEC_CRYPTO_CFLAGS   	= $(XMLSEC_OPENSSL_CFLAGS)
-XMLSEC_CRYPTO_SOLIBS  	= $(XMLSEC_OPENSSL_SOLIBS)
-XMLSEC_CRYPTO_ALIBS    	= $(XMLSEC_OPENSSL_ALIBS)
-XMLSEC_CRYPTO_SO        = $(XMLSEC_OPENSSL_SO)
-XMLSEC_CRYPTO_IMP	= $(XMLSEC_OPENSSL_IMP)
-XMLSEC_CRYPTO_A		= $(XMLSEC_OPENSSL_A)
-!endif
-
 !if "$(WITH_DEFAULT_CRYPTO)" == "nss"
 XMLSEC_CRYPTO          	= "nss"
 XMLSEC_CRYPTO_CFLAGS   	= $(XMLSEC_NSS_CFLAGS)
@@ -447,8 +437,6 @@ xmlsec : $(XMLSEC_APPS_INTDIR) $(BINDIR)\$(XMLSEC_SO) $(WITH_DEFAULT_CRYPTO)
 xmlseca :  $(XMLSEC_APPS_INTDIR_A) $(BINDIR)\$(XMLSEC_A) $(WITH_DEFAULT_CRYPTO)
 
 openssl: $(BINDIR)\$(XMLSEC_OPENSSL_SO) $(BINDIR)\$(XMLSEC_OPENSSL_A)
-
-openssl_096: $(BINDIR)\$(XMLSEC_OPENSSL_SO) $(BINDIR)\$(XMLSEC_OPENSSL_A)
 
 nss: $(BINDIR)\$(XMLSEC_NSS_SO) $(BINDIR)\$(XMLSEC_NSS_A)
 
