--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_PREREQ(2.2)
-AC_INIT(src/xmlsec.c)
-AM_CONFIG_HEADER(config.h)
-AC_CANONICAL_HOST
+AC_INIT([xmlsec1], 1.1.2, [http://www.aleksey.com/xmlsec])
 
 XMLSEC_PACKAGE=xmlsec1
 XMLSEC_VERSION_MAJOR=1
@@ -12,8 +9,9 @@ XMLSEC_VERSION="$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBM
 XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
 XMLSEC_VERSION_SAFE=`echo $XMLSEC_VERSION | sed 's/\./_/g'`
 
-PACKAGE=$XMLSEC_PACKAGE
-VERSION=$XMLSEC_VERSION
+AC_PREREQ(2.2)
+AM_CONFIG_HEADER(config.h)
+AC_CANONICAL_HOST
 
 AC_SUBST(XMLSEC_VERSION)
 AC_SUBST(XMLSEC_PACKAGE)
@@ -23,7 +21,7 @@ AC_SUBST(XMLSEC_VERSION_MINOR)
 AC_SUBST(XMLSEC_VERSION_SUBMINOR)
 AC_SUBST(XMLSEC_VERSION_INFO)
 
-AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
+AM_INIT_AUTOMAKE([1.9 tar-ustar])
 AM_MAINTAINER_MODE
 
 dnl
@@ -150,7 +148,7 @@ LIBXML_FOUND="no"
 AC_ARG_WITH(libxml, [  --with-libxml=[PFX]       libxml2 location])
 if test "z$with_libxml" = "zno" ; then 
     AC_MSG_CHECKING(for libxml2 libraries >= $LIBXML_MIN_VERSION) 
-    AC_MSG_ERROR(libxml2 >= $LIBXML_MIN_VERSION is required for $PACKAGE)
+    AC_MSG_ERROR(libxml2 >= $LIBXML_MIN_VERSION is required for $XMLSEC_PACKAGE)
 elif test "z$with_libxml" = "z" -a "z$PKG_CONFIG_ENABLED" = "zyes" ; then
     PKG_CHECK_MODULES(LIBXML, libxml-2.0 >= $LIBXML_MIN_VERSION,
 	[LIBXML_FOUND=yes],
@@ -174,7 +172,7 @@ if test "z$LIBXML_FOUND" = "zno" ; then
 	LIBXML_FOUND="yes"
         AC_MSG_RESULT(yes ('$LIBXML_VERSION'))
     else
-        AC_MSG_ERROR(You need at least libxml2 $LIBXML_MIN_VERSION for this version of $PACKAGE)
+        AC_MSG_ERROR(You need at least libxml2 $LIBXML_MIN_VERSION for this version of $XMLSEC_PACKAGE)
     fi
 fi
 
@@ -223,7 +221,7 @@ if test "z$LIBXSLT_FOUND" = "zno" ; then
 	    LIBXSLT_FOUND="yes"
     	    AC_MSG_RESULT("yes ('$LIBXSLT_VERSION')")
 	else
-    	    AC_MSG_ERROR(You need at least libxslt $LIBXSLT_MIN_VERSION for this version of $PACKAGE)
+    	    AC_MSG_ERROR(You need at least libxslt $LIBXSLT_MIN_VERSION for this version of $XMLSEC_PACKAGE)
 	fi	
     fi
 fi
@@ -262,7 +260,7 @@ OPENSSL_MIN_VERSION="0.9.6"
 OPENSSL_VERSION=""
 OPENSSL_CFLAGS=""
 OPENSSL_LIBS=""
-OPENSSL_CRYPTO_LIB="$PACKAGE-openssl"
+OPENSSL_CRYPTO_LIB="$XMLSEC_PACKAGE-openssl"
 OPENSSL_FOUND=no
 AC_ARG_WITH(openssl, [  --with-openssl=[PFX]      openssl location])
 if test "z$with_openssl" = "zno" ; then
@@ -428,7 +426,7 @@ GNUTLS_NEW_MIN_VERSION="1.0.0"
 GNUTLS_VERSION=""
 GNUTLS_CFLAGS=""
 GNUTLS_LIBS=""
-GNUTLS_CRYPTO_LIB="$PACKAGE-gnutls"
+GNUTLS_CRYPTO_LIB="$XMLSEC_PACKAGE-gnutls"
 GNUTLS_FOUND="no"
 AC_ARG_WITH(gnutls, [  --with-gnutls=[PFX]       gnutls location])
 if test "z$with_gnutls" = "zno" ; then
@@ -475,7 +473,7 @@ if test "z$GNUTLS_FOUND" = "zno" ; then
 	    fi    
 	    AC_MSG_RESULT(yes)
 	else
-    	    AC_MSG_ERROR(You need at least gnutls $GNUTLS_MIN_VERSION for this version of $PACKAGE)
+    	    AC_MSG_ERROR(You need at least gnutls $GNUTLS_MIN_VERSION for this version of $XMLSEC_PACKAGE)
 	fi	
     fi
 fi
@@ -530,7 +528,7 @@ NSS_CFLAGS=""
 NSS_LIBS=""
 NSS_LIBS_LIST="-lnss3 -lsmime3"
 NSPR_LIBS_LIST="-lnspr4 -lplds4 -lplc4"
-NSS_CRYPTO_LIB="$PACKAGE-nss"
+NSS_CRYPTO_LIB="$XMLSEC_PACKAGE-nss"
 NSS_FOUND="no"
 
 dnl if nss is disabled, bail out early
@@ -741,7 +739,7 @@ dnl Do we have a crypto library?
 dnl ==========================================================================
 AC_MSG_CHECKING(for crypto library) 
 if test "z$XMLSEC_CRYPTO" = "z" ;  then
-    AC_MSG_ERROR(At least one crypto library should exist for $PACKAGE)
+    AC_MSG_ERROR(At least one crypto library should exist for $XMLSEC_PACKAGE)
 else
     AC_MSG_RESULT(yes ('$XMLSEC_CRYPTO'))
 fi
@@ -1184,7 +1182,7 @@ AC_SUBST(XMLSEC_CRYPTO_LIBS)
 
 XMLSEC_CRYPTO_PC_FILES_LIST=""
 for i in $XMLSEC_CRYPTO_LIST ; do
-    XMLSEC_CRYPTO_PC_FILES_LIST="$XMLSEC_CRYPTO_PC_FILES_LIST $PACKAGE-$i.pc"
+    XMLSEC_CRYPTO_PC_FILES_LIST="$XMLSEC_CRYPTO_PC_FILES_LIST $XMLSEC_PACKAGE-$i.pc"
 done
 AC_SUBST(XMLSEC_CRYPTO_PC_FILES_LIST)
 
