--- a/config.h.in
+++ b/config.h.in
@@ -215,7 +215,7 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* Define if compiler has function prototypes */
+/* Define to 1 if the C compiler supports function prototypes. */
 #undef PROTOTYPES
 
 /* The size of a `size_t', as computed by sizeof. */
@@ -226,6 +226,9 @@
 
 /* Version number of package */
 #undef VERSION
+
+/* Define like PROTOTYPES; this can be used by system headers. */
+#undef __PROTOTYPES
 
 /* Define to empty if `const' does not conform to ANSI C. */
 #undef const
