--- a/examples/Makefile.w32
+++ b/examples/Makefile.w32
@@ -4,7 +4,7 @@
 # environment. Having done that, you can do a
 
 XMLSEC_STATIC  = yes
-XMLSEC_CRYPTO  = mscrypto
+XMLSEC_CRYPTO  = openssl
 XMLSEC_CFLAGS  =
 XMLSEC_LIBS    =
 
@@ -29,8 +29,8 @@ XMLSEC_EXAMPLES = \
 # 
 !IF "$(XMLSEC_CRYPTO)" == "openssl"
 XMLSEC_CFLAGS = $(XMLSEC_CFLAGS) /D "XMLSEC_CRYPTO_OPENSSL" /D "XMLSEC_CRYPTO=\"openssl\""
-XMLSEC_SOLIBS = libxmlsec-openssl.lib libeay32_a.lib wsock32.lib user32.lib gdi32.lib 
-XMLSEC_ALIBS  = libxmlsec-openssl_a.lib libeay32_a.lib wsock32.lib user32.lib gdi32.lib 
+XMLSEC_SOLIBS = libxmlsec-openssl.lib libeay32.lib wsock32.lib user32.lib gdi32.lib 
+XMLSEC_ALIBS  = libxmlsec-openssl.lib libeay32.lib wsock32.lib user32.lib gdi32.lib 
 !ENDIF
 
 !IF "$(XMLSEC_CRYPTO)" == "nss"
@@ -48,10 +48,10 @@ XMLSEC_ALIBS  = libxmlsec-mscrypto_a.lib user32.lib gdi32.lib crypt32.lib advapi
 !IF "$(XMLSEC_STATIC)" == "yes"
 XMLSEC_CFLAGS = $(XMLSEC_CFLAGS) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC"
 XMLSEC_LIBS   = $(XMLSEC_LIBS) $(XMLSEC_ALIBS) libxmlsec_a.lib \
-		libxml2_a.lib libxslt_a.lib libexslt_a.lib iconv_a.lib
+		libxml2_a.lib libxslt_a.lib libexslt_a.lib 
 !ELSE
 XMLSEC_LIBS   = $(XMLSEC_LIBS) $(XMLSEC_SOLIBS) libxmlsec.lib libxml2.lib \
-		libxslt.lib libexslt.lib iconv.lib
+		libxslt.lib libexslt.lib
 !ENDIF
 
 # The preprocessor and its options.
