--- a/src/nss/Makefile.am
+++ b/src/nss/Makefile.am
@@ -1,22 +1,21 @@
 NULL =
 
 EXTRA_DIST = \
-	globals.h \
 	README \
 	$(NULL)
 
-INCLUDES = \
+lib_LTLIBRARIES = \
+	libxmlsec1-nss.la \
+	$(NULL)
+
+libxmlsec1_nss_la_CPPFLAGS = \
 	-DPACKAGE=\"@PACKAGE@\" \
-	-I$(top_srcdir) \
+	-I../../include \
 	-I$(top_srcdir)/include \
 	$(XMLSEC_DEFINES) \
 	$(NSS_CFLAGS) \
 	$(LIBXSLT_CFLAGS) \
 	$(LIBXML_CFLAGS) \
-	$(NULL)
-
-lib_LTLIBRARIES = \
-	libxmlsec1-nss.la \
 	$(NULL)
 
 libxmlsec1_nss_la_SOURCES =\
@@ -35,7 +34,12 @@ libxmlsec1_nss_la_SOURCES =\
 	keytrans.c \
 	kw_des.c \
 	kw_aes.c \
+	globals.h \
 	$(NULL)
+
+if SHAREDLIB_HACK
+libxmlsec1_nss_la_SOURCES += ../strings.c
+endif
 
 libxmlsec1_nss_la_LIBADD = \
 	../libxmlsec1.la \
@@ -43,8 +47,11 @@ libxmlsec1_nss_la_LIBADD = \
 	$(LIBXSLT_LIBS) \
 	$(LIBXML_LIBS) \
 	$(NULL)
-        
-libxmlsec1_nss_la_LDFLAGS = \
-	-version-info @XMLSEC_VERSION_INFO@ \
+
+libxmlsec1_nss_la_DEPENDENCIES = \
 	$(NULL)
 
+libxmlsec1_nss_la_LDFLAGS = \
+	@XMLSEC_CRYPTO_EXTRA_LDFLAGS@ \
+	-version-info @XMLSEC_VERSION_INFO@ \
+	$(NULL)
