--- a/configure.in
+++ b/configure.in
@@ -28,6 +28,7 @@ dnl
 dnl Check the environment
 dnl
 AC_PROG_CC
+AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
 AC_PROG_INSTALL
 AC_STDC_HEADERS
@@ -83,11 +84,37 @@ fi
 dnl ==========================================================================
 dnl Perform host specific configuration
 dnl ==========================================================================
+XMLSEC_EXTRA_LDFLAGS=
+XMLSEC_CRYPTO_EXTRA_LDFLAGS=
+dnl should separate extra LDFLAGS for xmlsec and crypto libs ?
+dnl should --enable-runtime-pseudo-reloc for mingw and cygwin ?
+
+xmlsec_sharedlib_hack="no"
+XMLSEC_SHLIBSFX="$shrext"
 case "${host}" in
     *aix* )
 	CFLAGS="${CFLAGS} -D_ALL_SOURCE"
 	;;
+ *-*-mingw*)
+	dnl use libtool flags "-avoid-version" to create shared
+	dnl libraries without version suffix, i.e. libxmlsec1.dll
+	dnl instead libxmlsec1-NN.dll, where NN is a number.
+	XMLSEC_EXTRA_LDFLAGS="-no-undefined -avoid-version"
+	XMLSEC_CRYPTO_EXTRA_LDFLAGS="-no-undefined -avoid-version"
+	XMLSEC_SHLIBSFX=".dll.a"
+	xmlsec_sharedlib_hack="yes"
+	;;
+ *-*-cygwin*)
+	XMLSEC_EXTRA_LDFLAGS="-no-undefined"
+	XMLSEC_CRYPTO_EXTRA_LDFLAGS="-no-undefined"
+	;;
 esac
+
+# To avoid problem with loading of a shared library (dlopen or equivalent)
+# at run time on some platforms we need to link crypto modules with extra
+# source. It's work without hack on 9x and under emulation.
+# On nt 5.x (w2k,xp) the error is 998("Invalid access to memory location").
+AM_CONDITIONAL(SHAREDLIB_HACK, [test "z$xmlsec_sharedlib_hack" = "zyes"])
 
 dnl ==========================================================================
 dnl Hack for autoconf version mismatch
@@ -283,11 +310,16 @@ if test "z$with_openssl" = "zno" ; then
     AC_MSG_CHECKING(for openssl libraries >= $OPENSSL_MIN_VERSION) 
     AC_MSG_RESULT(no)
 elif test "z$with_openssl" != "z" ; then
+    case $host in
+	*-*-mingw*) openssl_exlibs=;;
+	#FIXME: check if lib "dl" is required
+	*)          openssl_exlibs=-ldl;;
+    esac
     OPENSSL_CFLAGS="$OPENSSL_CFLAGS -I$with_openssl/include"
-    if test -f "$with_openssl/lib/libcrypto$shrext" ; then
-    	OPENSSL_LIBS="-L$with_openssl/lib -lcrypto -ldl"
+    if test -f "$with_openssl/lib/libcrypto${XMLSEC_SHLIBSFX}" ; then
+	OPENSSL_LIBS="-L$with_openssl/lib -lcrypto $openssl_exlibs"
     else
-	OPENSSL_LIBS="$with_openssl/lib/libcrypto.a -ldl"
+	OPENSSL_LIBS="$with_openssl/lib/libcrypto.a $openssl_exlibs"
     fi
     OPENSSL_FOUND="yes"
 elif test "z$PKG_CONFIG_ENABLED" = "zyes" ; then
@@ -783,6 +815,68 @@ AC_SUBST(GNUTLS_CRYPTO_LIB)
 AC_SUBST(GNUTLS_MIN_VERSION)
 
 dnl ==========================================================================
+dnl See if we can find MSCrypto
+dnl ==========================================================================
+XMLSEC_NO_MSCRYPTO="1"
+MSCRYPTO_CFLAGS=""
+MSCRYPTO_LIBS=""
+MSCRYPTO_CRYPTO_LIB="$XMLSEC_PACKAGE-mscrypto"
+MSCRYPTO_ENABLE='none'
+AC_ARG_ENABLE(mscrypto,
+	[  --enable-mscrypto       enable mscrypto (no)],
+	[MSCRYPTO_ENABLE=$enableval])
+if test "z$MSCRYPTO_ENABLE" != "zyes" ; then
+    AC_MSG_CHECKING(for mscrypto libraries)
+    AC_MSG_RESULT([$MSCRYPTO_ENABLE])
+else
+dnl cannot detect __stdcall functions
+dnl    AC_CHECK_LIB(crypt32, CertOpenStore, ....
+    LIBS_SAVE="$LIBS"
+    LIBS="$LIBS -lcrypt32"
+    AC_MSG_CHECKING(for mscrypto libraries)
+    AC_LINK_IFELSE([
+	#include <windows.h>
+	#include <wincrypt.h>
+	int main () { CertOpenStore(0,0,0,0,0);; return(0); }
+	],
+	[],
+	[MSCRYPTO_ENABLE="no"])
+    AC_MSG_RESULT([$MSCRYPTO_ENABLE])
+    LIBS="$LIBS_SAVE"
+fi
+
+if test "z$MSCRYPTO_ENABLE" = "zyes" ; then
+    XMLSEC_NO_MSCRYPTO="0"
+
+    MSCRYPTO_CFLAGS="$MSCRYPTO_CFLAGS -DXMLSEC_CRYPTO_MSCRYPTO=1"
+    case $host in
+	*-*-mingw*)
+		dnl since mingw crypt32 library is limited we will use own
+		dnl def-file with ugly libtool workaround
+		MSCRYPTO_LIBS='-export-symbols $(srcdir)/mingw-crypt32.def';;
+	*)
+		MSCRYPTO_LIBS="-lcrypt32";;
+    esac
+
+    dnl first crypto library is default one
+    if test "z$XMLSEC_CRYPTO" = "z" ; then
+	XMLSEC_CRYPTO="mscrypto"
+    	XMLSEC_CRYPTO_LIB="$MSCRYPTO_CRYPTO_LIB"
+	XMLSEC_CRYPTO_CFLAGS="$MSCRYPTO_CFLAGS"
+	XMLSEC_CRYPTO_LIBS="$MSCRYPTO_LIBS"
+    fi	
+    XMLSEC_CRYPTO_LIST="$XMLSEC_CRYPTO_LIST mscrypto"
+else
+    XMLSEC_CRYPTO_DISABLED_LIST="$XMLSEC_CRYPTO_DISABLED_LIST mscrypto"
+fi
+
+AM_CONDITIONAL(XMLSEC_NO_MSCRYPTO, [test "z$XMLSEC_NO_MSCRYPTO" = "z1"])
+AC_SUBST(XMLSEC_NO_MSCRYPTO)
+AC_SUBST(MSCRYPTO_CFLAGS)
+AC_SUBST(MSCRYPTO_LIBS)
+AC_SUBST(MSCRYPTO_CRYPTO_LIB)
+
+dnl ==========================================================================
 dnl Do we have a crypto library?
 dnl ==========================================================================
 AC_MSG_CHECKING(for crypto library) 
@@ -1226,6 +1320,12 @@ XMLSEC_NSS_LIBS="-L${libdir} -l$NSS_CRYPTO_LIB $XMLSEC_CORE_LIBS $NSS_LIBS"
 AC_SUBST(XMLSEC_NSS_CFLAGS)
 AC_SUBST(XMLSEC_NSS_LIBS)
 
+dnl No we will not generate pkg-config file for mscrypto !
+dnl XMLSEC_MSCRYPTO_CFLAGS="$XMLSEC_CORE_CFLAGS $MSCRYPTO_CFLAGS"
+dnl XMLSEC_MSCRYPTO_LIBS="-L${libdir} -l$MSCRYPTO_CRYPTO_LIB $XMLSEC_CORE_LIBS $MSCRYPTO_LIBS";;
+dnl AC_SUBST(XMLSEC_MSCRYPTO_CFLAGS)
+dnl AC_SUBST(XMLSEC_MSCRYPTO_LIBS)
+
 XMLSEC_CFLAGS="$XMLSEC_CORE_CFLAGS $LIBXML_CFLAGS $LIBXSLT_CFLAGS $XMLSEC_CRYPTO_CFLAGS"
 XMLSEC_LIBS="-L${libdir} -l$XMLSEC_CRYPTO_LIB $XMLSEC_CORE_LIBS $LIBXML_LIBS $LIBXSLT_LIBS $XMLSEC_CRYPTO_LIBS"
 AC_SUBST(XMLSEC_CFLAGS)
@@ -1236,6 +1336,8 @@ AC_SUBST(XMLSEC_APP_DEFINES)
 AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
+AC_SUBST(XMLSEC_EXTRA_LDFLAGS)
+AC_SUBST(XMLSEC_CRYPTO_EXTRA_LDFLAGS)
 
 AC_SUBST(XMLSEC_CRYPTO)
 AC_SUBST(XMLSEC_CRYPTO_LIST)
@@ -1246,6 +1348,8 @@ AC_SUBST(XMLSEC_CRYPTO_LIBS)
 
 XMLSEC_CRYPTO_PC_FILES_LIST=""
 for i in $XMLSEC_CRYPTO_LIST ; do
+    dnl skip pkg-config file for mscrypto
+    test x$i = xmscrypto && continue
     XMLSEC_CRYPTO_PC_FILES_LIST="$XMLSEC_CRYPTO_PC_FILES_LIST $XMLSEC_PACKAGE-$i.pc"
 done
 AC_SUBST(XMLSEC_CRYPTO_PC_FILES_LIST)
@@ -1263,6 +1367,10 @@ fi
 
 if test "z$XMLSEC_NO_NSS" != "z1" ; then
 AC_CONFIG_FILES([include/xmlsec/nss/Makefile src/nss/Makefile])
+fi
+
+if test "z$XMLSEC_NO_MSCRYPTO" != "z1" ; then
+AC_CONFIG_FILES([include/xmlsec/mscrypto/Makefile src/mscrypto/Makefile])
 fi
 
 if test "z$XMLSEC_NO_CRYPTO_DYNAMIC_LOADING" = "z1" ; then
