--- a/xmlsec.spec.in
+++ b/xmlsec.spec.in
@@ -151,6 +151,7 @@ rm -rf $RPM_BUILD_ROOT
 %{prefix}/lib/pkgconfig/xmlsec1.pc
 %{prefix}/lib/xmlsec1Conf.sh
 %{prefix}/share/doc/xmlsec1/* 
+%{prefix}/share/aclocal/xmlsec1.m4
 %doc AUTHORS HACKING ChangeLog NEWS README Copyright
 %doc %{_mandir}/man1/xmlsec1-config.1*
 
