--- a/configure.in
+++ b/configure.in
@@ -312,6 +312,7 @@ if test "z$with_openssl" = "zno" ; then
 elif test "z$with_openssl" != "z" ; then
     case $host in
 	*-*-mingw*) openssl_exlibs=;;
+	*-*-osf5*) openssl_exlibs=;;
 	#FIXME: check if lib "dl" is required
 	*)          openssl_exlibs=-ldl;;
     esac
