--- a/configure.in
+++ b/configure.in
@@ -68,7 +68,7 @@ dnl	- without dynamic xmlsec-crypto loading
 dnl ==========================================================================
 AC_MSG_CHECKING(for development environment) 
 AC_ARG_ENABLE(development,   [  --enable-development    enable development environment (no)])
-if test "z$enable_development" = "zyes" -o "z${LOGNAME}" = "zaleksey" ; then
+if test "z$enable_development" = "zyes" ; then
     enable_debuging="yes"
     enable_pedantic="yes"
     enable_static_linking="yes"
@@ -88,7 +88,12 @@ dnl should separate extra LDFLAGS for xmlsec and crypto libs ?
 dnl should --enable-runtime-pseudo-reloc for mingw and cygwin ?
 
 xmlsec_sharedlib_hack="no"
-XMLSEC_SHLIBSFX="$shrext"
+if test -n "$shrext"; then
+  XMLSEC_SHLIBSFX="$shrext"
+else
+  dnl changed in libtool (between 1.5.2 and 1.5.14)
+  XMLSEC_SHLIBSFX="$shrext_cmds"
+fi
 case "${host}" in
     *aix* )
 	CFLAGS="${CFLAGS} -D_ALL_SOURCE"
@@ -192,15 +197,16 @@ AC_ARG_WITH(libxml-src,
     [  --with-libxml-src=[PFX]   not installed yet libxml2 location]
 )
 
-if test "z$with_libxml" = "zno" -o test "z$with_libxml_src" = "zno"; then 
+if test "z$with_libxml" = "zno" -o "z$with_libxml_src" = "zno"; then 
     AC_MSG_CHECKING(for libxml2 libraries >= $LIBXML_MIN_VERSION) 
     AC_MSG_ERROR(libxml2 >= $LIBXML_MIN_VERSION is required for $XMLSEC_PACKAGE)
 elif test "z$with_libxml_src" != "z" ; then
+    AC_MSG_CHECKING(for libxml2 libraries >= $LIBXML_MIN_VERSION) 
     CWD=`pwd`
     if cd "$with_libxml_src" ; then 
 	SRC_DIR=`pwd`
 	LIBXML_CONFIG=${SRC_DIR}/xml2-config
-	LIBXML_LIBS="-L${SRC_DIR} -lxml2"
+	LIBXML_LIBS="-L${SRC_DIR}/.libs -lxml2"
 	LIBXML_CFLAGS="-I${SRC_DIR}/include"
 	LIBXML_FOUND="yes"
 	cd $CWD
@@ -259,11 +265,12 @@ if test "z$with_libxslt" = "zno" -o "z$with_libxslt_src" = "zno" ; then
     AC_MSG_RESULT(no)
     LIBXSLT_FOUND="without"
 elif test "z$with_libxslt_src" != "z" ; then
+    AC_MSG_CHECKING(for libxslt libraries >= $LIBXSLT_MIN_VERSION) 
     CWD=`pwd`
     if cd "$with_libxslt_src" ; then 
 	SRC_DIR=`pwd`
 	LIBXSLT_CONFIG=${SRC_DIR}/xslt-config
-	LIBXSLT_LIBS="-L${SRC_DIR} -lxslt"
+	LIBXSLT_LIBS="-L${SRC_DIR}/.libs -lxslt"
 	LIBXSLT_CFLAGS="-I${SRC_DIR}/include"
 	LIBXSLT_FOUND="yes"
 	cd $CWD
@@ -428,6 +435,19 @@ if test "z$OPENSSL_FOUND" = "zyes" -a "z$OPENSSL_VERSION" = "z" ; then
     if test "z$OPENSSL_VERSION" = "z" ; then
         AC_EGREP_CPP(yes,[
     	    #include <openssl/opensslv.h>
+	    #if OPENSSL_VERSION_NUMBER >= 0x10000000L
+		yes
+	    #endif
+	],[
+	    OPENSSL_VERSION="1.0.0"
+	],[
+	    OPENSSL_VERSION=""
+	])
+    fi
+
+    if test "z$OPENSSL_VERSION" = "z" ; then
+        AC_EGREP_CPP(yes,[
+    	    #include <openssl/opensslv.h>
 	    #if OPENSSL_VERSION_NUMBER >= 0x00908000L
 		yes
 	    #endif
@@ -482,6 +502,9 @@ if test "z$OPENSSL_FOUND" = "zyes" ; then
     fi    
     if test "z$OPENSSL_VERSION" = "z0.9.8" ; then
 	OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_OPENSSL_098=1"
+    fi    
+    if test "z$OPENSSL_VERSION" = "z1.0.0" ; then
+	OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_OPENSSL_100=1"
     fi    
     OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_CRYPTO_OPENSSL=1"
     	
