add openbsd patch

--- a/configure.in
+++ b/configure.in
@@ -355,6 +355,7 @@ elif test "z$with_openssl" != "z" ; then
     case $host in
 	*-*-mingw*) openssl_exlibs=;;
 	*-*-osf5*) openssl_exlibs=;;
+	*-*-openbsd*) openssl_exlibs=;;
 	#FIXME: check if lib "dl" is required
 	*)          openssl_exlibs=-ldl;;
     esac
