--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@ XMLSEC_VERSION="$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBM
 XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
 XMLSEC_VERSION_SAFE=`echo $XMLSEC_VERSION | sed 's/\./_/g'`
 
-AC_PREREQ(2.64)
+AC_PREREQ([2.52g])
 AC_CANONICAL_HOST
 
 AC_SUBST(XMLSEC_VERSION)
